--- a/VitaminoMania/Storyboards/Seasons/Autumn.storyboard
+++ b/VitaminoMania/Storyboards/Seasons/Autumn.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,31 +28,26 @@
         <scene sceneID="pFp-z6-5ul">
             <objects>
                 <viewController id="bYD-TY-wF6" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="tVy-gj-qFj">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="7Wz-ff-gVz">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Autumn" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="otm-8T-dAt">
-                                <rect key="frame" x="175" y="460" width="60" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="Iuv-Ep-0nc"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="otm-8T-dAt" firstAttribute="leading" secondItem="Iuv-Ep-0nc" secondAttribute="leading" constant="175" id="4LP-yE-umd"/>
-                            <constraint firstItem="Iuv-Ep-0nc" firstAttribute="trailing" secondItem="otm-8T-dAt" secondAttribute="trailing" constant="158" id="ikb-um-IiM"/>
-                            <constraint firstItem="otm-8T-dAt" firstAttribute="top" secondItem="Iuv-Ep-0nc" secondAttribute="top" constant="357" id="jKm-8R-JTp"/>
-                            <constraint firstItem="Iuv-Ep-0nc" firstAttribute="bottom" secondItem="otm-8T-dAt" secondAttribute="bottom" constant="381" id="juR-IZ-dsV"/>
-                        </constraints>
-                    </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Autumn" id="jgC-lZ-Iks">
+                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jgC-lZ-Iks" id="xhr-oA-CHO">
+                                    <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
                     <tabBarItem key="tabBarItem" title="Autumn" image="autumn" id="y1d-eC-JlN">
                         <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="5"/>
                     </tabBarItem>
-                    <navigationItem key="navigationItem" id="hfy-8i-WXF"/>
+                    <navigationItem key="navigationItem" title="Autumn" id="hfy-8i-WXF"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qNg-Ru-oC3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
