--- a/VitaminoMania/Storyboards/Seasons/Winter.storyboard
+++ b/VitaminoMania/Storyboards/Seasons/Winter.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,31 +29,26 @@
             </objects>
             <point key="canvasLocation" x="-94" y="8"/>
         </scene>
-        <!--View Controller-->
+        <!--Winter-->
         <scene sceneID="lyg-Ao-GqX">
             <objects>
                 <viewController id="zbF-Bm-QPc" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wm2-zo-8we">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="kKD-To-ZLx">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Winter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Prr-f3-YIK">
-                                <rect key="frame" x="175" y="416" width="51" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="4tW-KV-Lei"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="4tW-KV-Lei" firstAttribute="bottom" secondItem="Prr-f3-YIK" secondAttribute="bottom" constant="381" id="2o4-3L-jmh"/>
-                            <constraint firstItem="4tW-KV-Lei" firstAttribute="trailing" secondItem="Prr-f3-YIK" secondAttribute="trailing" constant="167" id="SvN-F7-sHd"/>
-                            <constraint firstItem="Prr-f3-YIK" firstAttribute="top" secondItem="4tW-KV-Lei" secondAttribute="top" constant="313" id="ZA6-Sk-JQX"/>
-                            <constraint firstItem="Prr-f3-YIK" firstAttribute="leading" secondItem="4tW-KV-Lei" secondAttribute="leading" constant="175" id="zeR-6d-dk7"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="scZ-LM-U4X"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Winter" id="xna-KW-4Vd">
+                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xna-KW-4Vd" id="728-KX-OdK">
+                                    <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Winter" id="scZ-LM-U4X"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k8V-4b-JTC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
