--- a/VitaminoMania/Storyboards/Seasons/Spring.storyboard
+++ b/VitaminoMania/Storyboards/Seasons/Spring.storyboard
@@ -37,11 +37,11 @@
                                 <rect key="frame" x="0.0" y="20" width="393" height="832"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Spring" id="0Ge-nh-tRk">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Spring" id="0Ge-nh-tRk">
                                         <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0Ge-nh-tRk" id="zST-cB-eeD">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -54,7 +54,7 @@
                     <tabBarItem key="tabBarItem" title="Spring" image="spring" selectedImage="spring" id="cbH-hj-fo3">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="5"/>
                     </tabBarItem>
-                    <navigationItem key="navigationItem" id="KzP-iz-gf4"/>
+                    <navigationItem key="navigationItem" title="Spring" id="KzP-iz-gf4"/>
                     <connections>
                         <outlet property="tableView" destination="phC-0G-pDV" id="Ebl-Kl-nNg"/>
                     </connections>
